# ai-sentinel

./: LICENSE  README.md  pyproject.toml  setup.cfg
ai_sentinel/: __init__.py  audit.py  dangerous_patterns.json  detection.py  patterns.py  score.py  setup.py  suggestion.py
tests/: test_audit.py
