[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sentinel"
version = "0.1.0"
description = "A Python library as a tool for monitoring and managing AI systems."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Mieow-ai", email = "simon.corvoysier@gmail.com" }
]

[project.urls]
Homepage = "https://github.com/Mieow-ai/ai-sentinel"