[metadata]
name = ai-sentinel
version = 0.1.0
author = Mieow-ai
author_email = simon.corvoysier@gmail.com
description = A Python library as a tool for monitoring and managing AI systems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mieow-ai/ai-sentinel
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
tests_require =
    pytest